--- a/data/tex/MA0000/main.tex
+++ b/data/tex/MA0000/main.tex
@@ -13,10 +13,10 @@
 % module information
 \academicyear{2015-16}
 \modulecode{MA0000}
-\moduletitle{Cardiff Maths e-Learning}
+\moduletitle{Test Module}
 
 \booknumber{1}
-\booktitle{User Guide}
+\booktitle{Test Book}
 \bookauthor{Dafydd Evans}
 \bookversion{v0.1}
 
@@ -49,13 +49,12 @@
 
 %------------------------------------------------
 \chapter{Introduction}\label{ch:intro}
-Welcome to the Cardiff Maths eLearning project.
+Welcome to the Cardiff Maths eLearning project. This document is used for testing the system.
 
-BLAH
 
 %------------------------------------------------
 \chapter{Figures}\label{ch:figures}
-Here is a nice picture of our sponsor.
+A nice picture of our sponsor.
 
 \begin{figure}[ht]
 \centering
@@ -64,19 +63,17 @@ Here is a nice picture of our sponsor.
 \label{fig:camel-logo}
 \end{figure}
 
-No more figures.
-
 %------------------------------------------------
 \chapter{Lists}\label{ch:lists}
 
 Initial text.
 \begin{itemize}
-\item First item of itemize list
+\item First item of bulleted list
 \begin{enumerate}
-\item First item of nested enumerate list.
-\item Second item of nested enumerate list.
+\item First item of nested enumerated list.
+\item Second item of nested enumerated list.
 \end{enumerate}
-\item Second item of itemize list
+\item Second item of bulleted list
 \end{itemize}
 Final text.
 
@@ -84,16 +81,16 @@ Final text.
 \chapter{Labels, References and Citations}
 
 \begin{itemize}
-\item Here we include a label: \label{it:first-item}.
+\item Here we include a label: \label{it:first-item} (it's invisible).
 \item Here we include a reference to the introduction: Chapter~\ref{ch:intro}.
-\item Here we include a citation: \cite{evans02}.
+%\item Here we include a citation: \cite{evans02}.
 \end{itemize}
 
 %------------------------------------------------
-\chapter{Assessments}\label{ch:assessments}
+\chapter{Homeworks}\label{ch:homeworks}
 
-\begin{assessment}\label{ass:demo}
-This is the introduction to the assessment.
+\begin{homework}\label{hwk:demo}
+This is the introduction to the homework.
 \begin{questions} 
 \question This is the first question.\label{qu:first-question}
 \begin{answer} 
@@ -115,10 +112,11 @@ This is an answer to the second part of the third question.
 \end{answer} 
 \end{parts}
 \end{questions} 
-\end{assessment}
+\end{homework}
 
 %------------------------------------------------
 \chapter{Theorems}\label{ch:theorems}
+According to Pythagoras:
 \begin{theorem}
 \[
 a^2 + b^2 = c^2
@@ -126,7 +124,7 @@ a^2 + b^2 = c^2
 \end{theorem}
 
 \begin{exercise}
-Can you fix it?
+Can you prove Pythagoras' theorem?
 \end{exercise}
 
 %------------------------------------------------
