--- a/data/tex/MA1234/main.tex
+++ b/data/tex/MA1234/main.tex
@@ -2,9 +2,9 @@
 % main.tex - MA1500 2015-16
 %------------------------------------------------
 % uncomment one of these lines
-\documentclass{camel}
+%\documentclass{camel}
 %\documentclass[blanks]{camel}
-%\documentclass[answers]{camel}
+\documentclass[answers]{camel}
 %\documentclass[screen]{camel}
 
 % mandatory settings
